Changelog
=========

2.1.1 (unreleased)
------------------


2.1 (2011-03-24)
----------------

* Added 'Campaign Status' setting to the Salesforce.com wizard step.
  [davisagli]

2.1b3 (2011-03-22)
------------------

* Added a control panel in Site Setup to configure default values that will
  be used for new Megaphones.
  [davisagli]

* Fix javascript error affecting IE.
  [davisagli]

* Added render_recipients_list helper to the letter renderer.
  [davisagli]

* Revamped the UI of the fields wizard step. Field settings are now configured
  in an overlay.
  [davisagli]

2.1b2 (2010-11-16)
------------------

* Added a way to provide additional template variables by implementing an
  IVariableProvider adapter.
  [davisagli]

2.1b1 (2010-10-14)
------------------

* Raise AT ObjectInitializedEvent and ObjectEditedEvent when the wizard is finished.
  [davisagli]

* Updated the test setup to use a layer so that it can be extended by Megaphone
  plugins more easily.
  [davisagli]

* Added an upgrade step to remove the old "optional-recipients" field which is
  no longer needed.
  [davisagli]

* Revamped the UI of the recipients wizard step.  Recipient settings are now
  configured in an overlay.
  [davisagli]

* Introduced the concept of pluggable "recipient sources".  Each recipient source
  has its own settings, can provide content for the Megaphone form, and is queried
  for recipients when the form is submitted.  The old recipient functionality
  (with "required" and "optional" recipients) has been refactored into the "standard"
  recipient source.
  [davisagli]

2.0 (2010-10-14)
----------------

* Render the signatures portlet when sig_portlet_min_count is not set.
  [khink]

* Removed reference to "letter" from the default thank you message so that
  it makes sense for a petition too.
  [davisagli]

* Moved helper functions into the utils module.
  [davisagli]

* Only show "latest signatures" text in portlet if there are signatures to
  show.
  [jbaldivieso]
